# deilebot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  __main__.py  cli.py  conftest.py  pyproject.toml
config/: deilebot.example.yaml  settings.json  whatsapp_templates.yaml
deile/config/: api_config.yaml  commands.yaml  persona_config.yaml  system_config.yaml
deile_bot_client/: __init__.py  client.py  errors.py  models.py
deilebot/: __init__.py  __main__.py  _testing.py  cli.py
deilebot/bridge/: dm_tool.py
deilebot/foundation/: __init__.py  agent_bridge.py  audit.py  capabilities.py  conversation_store.py  dlq.py  envelope.py  event_bus.py  exceptions.py  forge_auth.py  github_auth.py  identity.py  intent.py  logging.py  memory_ops.py  metrics.py  permissions.py  persona_selector.py  pipeline.py  rate_limit.py  settings.py  setup_wizard.py  slash_dispatch.py  transcription.py  transcription_budget.py
deilebot/providers/: __init__.py  base.py
deilebot/runtime/: __init__.py  scheduler.py  (+2 more)
deilebot_client/: __init__.py  client.py  models.py
docs/: transcription-local-slo.md
foundation/: __init__.py  agent_bridge.py  agent_meta.py  audit.py  capabilities.py  conversation_store.py  dlq.py  envelope.py  event_bus.py  identity.py  intent.py  interactive.py  logging.py  output_formatter.py  permissions.py  persona_selector.py  pipeline.py  rate_limit.py  settings.py
providers/: __init__.py  base.py
runtime/: __init__.py  single_runtime.py  webhook_router.py
scripts/: bench_transcription_local.py
tests/: test_migration.py
(+183 files in other folders)
